--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "dependencies": {
     "babel-runtime": "^6.26.0",
     "bcrypt": "^1.0.3",
-    "jquery": "^3.2.1",
+    "cordova": "^7.1.0",
+    "datatables.net-bs": "^1.10.16",
+    "jquery": "^1.11.2",
     "meteor-node-stubs": "^0.3.2",
     "moment": "^2.19.2",
     "toastr": "^2.1.2"
