--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start": "meteor run"
   },
   "dependencies": {
+    "@babel/runtime": "^7.3.1",
     "babel-runtime": "^6.26.0",
     "bcrypt": "^1.0.3",
     "cordova": "^7.1.0",
